tree-sitter-dscexpression/corpus/valid_expressions.txt
=====
Function no args
=====
[function1()]
---

    (statement
      (expression
        (function
          (functionName))))

=====
Simple expression
=====
[myFunction('argString')]
---

    (statement
      (expression
        (function
          (functionName)
          (arguments
            (string)))))

=====
Multiple arguments
=====
[myFunction('argString', 1, -1, true)]
---

    (statement
      (expression
        (function
          (functionName)
          (arguments
            (string)
            (number)
            (number)
            (boolean)))))

=====
Nested functions
=====
[function1('argString', function2(1, functionThree('threeString', 3), 2), 'oneString')]
---

    (statement
      (expression
        (function
          (functionName)
          (arguments
            (string)
            (expression
              (function
                (functionName)
                (arguments
                  (number)
                  (expression
                    (function
                      (functionName)
                      (arguments
                        (string)
                        (number))))
                  (number))))
            (string)))))

=====
Function with dot-notation
=====
[functionOne('argString').prop1.prop2]
---

    (statement
      (expression
        (function
          (functionName)
          (arguments
            (string)))
        (memberAccess
          (memberName)
          (memberName))))

=====
Nested dot-notation
=====
[functionOne(functionTwo(2).prop1.prop2).prop3]
---

    (statement
      (expression
        (function
          (functionName)
          (arguments
            (expression
              (function
                (functionName)
                (arguments
                  (number)))
              (memberAccess
                (memberName)
                (memberName)))))
        (memberAccess
          (memberName))))
